# API-workshop

./: main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: CI.yml
app/: data.py  main.py  schema.py
tests/: test_func.py
