[tool.poetry]
name = "api-workshop"
version = "0.1.0"
description = ""
authors = ["A-Quaglia <augustoquaglia@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
taskipy = "^1.12.2"
pytest = "^8.1.1"
httpx = "^0.27.0"
pydantic = "^2.6.4"
isort = "^5.13.2"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn app.main:app --reload"
tests = "pytest -v"
format = """
isort .
black .
"""